--- a/4-natours/starter/views/overview.pug
+++ b/4-natours/starter/views/overview.pug
@@ -3,7 +3,7 @@ extends base
 block content
   main.main
     .card-container
-      each tour in tours
+      each tour in data.tours
         .card
           .card__header
             .card__picture
@@ -41,4 +41,4 @@ block content
               span.card__footer-value #{tour.ratingsAverage}
               | 
               span.card__footer-text rating (#{tour.ratingsQuantity})
-            a.btn.btn--green.btn--small(href=`/tours/${tour.slug}`) Details
+            a.btn.btn--green.btn--small(href=`/tour/${tour.slug}`) Details
