--- a/4-natours/starter/views/base.pug
+++ b/4-natours/starter/views/base.pug
@@ -8,6 +8,10 @@ html
       link(rel='stylesheet' href='/css/style.css')
       link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
+      //- MAPBOX
+      link(href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet')
+      script(src='/js/bundle.js')
+
 
 body
   // HEADER
