--- a/4-natours/starter/views/tour.pug
+++ b/4-natours/starter/views/tour.pug
@@ -1,6 +1,8 @@
 extends base
 
 block append head
+  link(href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet')
+  script(src="https://js.stripe.com/v3/")
 
 include _reviewBox
 
@@ -80,4 +82,8 @@ block content
       .cta__content
         h2.heading-secondary What are you waiting for?
         p.cta__text #{tour.duration} days. 1 adventure. Infinite memories. Make it yours today!
-        button.btn.btn--green.span-all-rows Book tour now!
+
+        if user
+          button.btn.btn--green.span-all-rows#book-tour(data-tour-id=`${tour.id}` data-skey=`${skey}`) Book tour now!
+        else
+          a.btn.btn--green.span-all-rows(href='/login') Login to book a tour
