my tours screen and booking CRUD API handlers

--- a/4-natours/starter/views/account.pug
+++ b/4-natours/starter/views/account.pug
@@ -15,7 +15,7 @@ block content
       nav.user-view__menu
         ul.side-nav
           +listItem('#', 'Settings', 'settings', true)
-          +listItem('#', 'My bookings', 'briefcase', false)
+          +listItem('/my-tours', 'My bookings', 'briefcase', false)
           +listItem('#', 'My reviews', 'star', false)
           +listItem('#', 'Billing', 'credit-card', false)
 
